welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value ||
  if (a>=10 && a<=20) || (b>=10 && b<=20){
                      ^max1020:3: error: missing arguments for method max in object Math;
follow this method with `_' if you want to treat it as a partially applied function
    if (Math.max(a,b)>=10 && Math.max<=20){
                                  ^max1020:8: error: not found: value &&
  else if (a<10 || a>20) && (b<10 || b>20){
                         ^max1020:8: error: type mismatch;
 found   : Unit
 required: Int
  else if (a<10 || a>20) && (b<10 || b>20){
       ^